# dockfoxbuild

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yaml  release.yaml
src/: build.rs  copy.rs  db.rs  dockerignore.rs  duration.rs  main.rs  parse.rs  prune.rs  pull.rs  push.rs  size.rs  state.rs  substitute.rs
